<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="InsertActivities.InsertPlanPhaseThree"
    android:background="@drawable/my_background">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/phase_three_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:onClick="doInsert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_icon"
        android:focusable="true"
        android:contentDescription="@string/save_btn" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/phase_three_toolbar_insert"
        app:title="Tervezés"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_toolbar_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/phase_three_textview1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:text="@string/plan_name_title"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase_three_toolbar_insert" />


    <TextView
        android:id="@+id/phase_three_name_insert"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:text="@string/plan_name_value"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase_three_toolbar_insert" />

    <TextView
        android:id="@+id/phase_three_textview2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:text="@string/plan_place_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase_three_textview1" />

    <TextView
        android:id="@+id/phase_three_place_insert"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:text="@string/plan_place_value"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase_three_name_insert" />

    <TextView
        android:id="@+id/phase_three_textview3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:text="@string/plan_category_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase_three_textview2" />


    <TextView
        android:id="@+id/phase_three_category_insert"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:text="@string/plan_category_value"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase_three_place_insert" />


    <EditText
        android:id="@+id/plan_note_insert"
        android:layout_width="365dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="12dp"
        android:backgroundTint="?attr/colorAccent"
        android:ems="10"
        android:gravity="bottom|start"
        android:hint="@string/plan_note_hint"
        android:inputType="textMultiLine"
        android:maxLength="40"
        android:maxLines="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase_three_category_insert"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/phase_three_textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:text="@string/selected_exercises"
        android:textSize="20sp"
        android:textStyle=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_note_insert" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/phase_three_recycler_insert"
        android:layout_width="365dp"
        android:layout_height="325dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase_three_textview5"
        app:layout_constraintVertical_bias="0.166" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>