<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="UpdateActivities.UpdateExercise"
    android:background="@drawable/my_background">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_update_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/save_btn"
        android:focusable="true"
        android:onClick="doUpdateInExerciseUpdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_icon" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_update_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_toolbar_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/update_exercise_title" />

    <EditText
        android:id="@+id/name_update_exercise"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/give_exercise_name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:maxLength="25"
        android:padding="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_update_exercise" />

    <TextView
        android:id="@+id/level_spinner_update_exercise"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/give_exercise_level"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="15sp"
        app:drawableEndCompat="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_update_exercise" />

    <TextView
        android:id="@+id/type_spinner_update_exercise"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"

        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/give_exercise_type"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="15sp"
        app:drawableEndCompat="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_spinner_update_exercise" />

    <TextView
        android:id="@+id/category_spinner_update_exercise"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/give_exercise_category"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="15sp"
        app:drawableEndCompat="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_spinner_update_exercise" />

    <TextView
        android:id="@+id/muscles_spinner_update_exercise"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/give_exercise_muscles"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="15sp"
        app:drawableEndCompat="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner_update_exercise" />

    <TextView
        android:id="@+id/tool_spinner_update_exercise"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/give_exercise_tools"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="15sp"
        app:drawableEndCompat="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/muscles_spinner_update_exercise" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="208dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:text="@string/hand_kind_exercise"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/hand_switch_update_exercise"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="205dp"
        android:layout_height="37dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:text="@string/static_kind_exercise"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/static_switch_update_exercise"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="157dp"
        android:text="Milyen a gyakorlat?"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_spinner_update_exercise" />

    <Switch
        android:id="@+id/static_switch_update_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:thumb="@drawable/thumb"
        android:track="@drawable/track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="198dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:text="@string/weight_kind_exercise"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/weight_switch_update_exercise"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Switch
        android:id="@+id/weight_switch_update_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:thumb="@drawable/thumb"
        android:track="@drawable/track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/static_switch_update_exercise"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/hand_switch_update_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:thumb="@drawable/thumb"
        android:track="@drawable/track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_switch_update_exercise"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</androidx.constraintlayout.widget.ConstraintLayout>